2007-09-27  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/axis/CategoryAxis.java
	(getCategorySeriesMiddle): New method,
	* source/org/jfree/chart/renderer/category/LineAndShapeRenderer.java
	(useSeriesOffset): New field,
	(itemMargin): Likewise,
	(LineAndShapeRenderer(boolean, boolean)): Initialise new fields,
	(getUseSeriesOffset): New method,
	(setUseSeriesOffset): Likewise,
	(getItemMargin): Likewise,
	(setItemMargin): Likewise,
	(drawItem): Apply new offset option to x-coordinates,
	(equals): Check new fields,
	* tests/org/jfree/chart/renderer/category/junit/LineAndShapeRendererTests.java
	(testEquals): Updated for new fields.

2007-09-26  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/GrayPaintScale.java
	(getPaint): Use constrained value to calculate gray scale value,
	* tests/org/jfree/chart/renderer/junit/GrayPaintScaleTests.java
	(testConstructor): New test method,
	(testGetPaint): Likewise.
	
2007-09-26  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/XYBarRenderer.java
	(drawItem): Apply margin in a way that works for inverted axes.
	
2007-09-26  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/PlotUtilities.java: New class,
	* source/org/jfree/data/general/DatasetUtilities.java
	(isEmptyOrNull(XYDataset)): Return early if not empty,
	* tests/org/jfree/data/general/junit/DatasetUtilitiesTests.java
	(testIsEmptyOrNullXYDataset): New test method.
	
2007-09-26  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/general/Series.java
	(getItemCount): New abstract method,
	(isEmpty): New method.
	
2007-09-26  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/XYPlot.java
	(getQuadrantPaint): Improve exception text,
	(setQuadrantPaint): Likewise,
	(getDomainAxisForDataset): Likewise,
	(getRangeAxisForDataset): Likewise.
	