@@ -6,24 +6,24 @@
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
- * This library is free software; you can redistribute it and/or modify it 
- * under the terms of the GNU Lesser General Public License as published by 
- * the Free Software Foundation; either version 2.1 of the License, or 
+ * This library is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation; either version 2.1 of the License, or
  * (at your option) any later version.
  *
- * This library is distributed in the hope that it will be useful, but 
- * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY 
- * or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public 
+ * This library is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+ * or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public
  * License for more details.
  *
  * You should have received a copy of the GNU Lesser General Public
  * License along with this library; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, 
- * USA.  
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301,
+ * USA.
  *
- * [Java is a trademark or registered trademark of Sun Microsystems, Inc. 
+ * [Java is a trademark or registered trademark of Sun Microsystems, Inc.
  * in the United States and other countries.]
- * 
+ *
  * ------------------------------------
  * StatisticalLineAndShapeRenderer.java
  * ------------------------------------
@@ -37,19 +37,21 @@
  * Changes
  * -------
  * 01-Feb-2005 : Version 1, contributed by Mofeed Shahin (DG);
- * 16-Jun-2005 : Added errorIndicatorPaint to be consistent with 
+ * 16-Jun-2005 : Added errorIndicatorPaint to be consistent with
  *               StatisticalBarRenderer (DG);
- * ------------- JFREECHART 1.0.0 ---------------------------------------------
- * 11-Apr-2006 : Fixed bug 1468794, error bars drawn incorrectly when rendering 
+ * ------------- JFREECHART 1.0.x ---------------------------------------------
+ * 11-Apr-2006 : Fixed bug 1468794, error bars drawn incorrectly when rendering
  *               plots with horizontal orientation (DG);
  * 25-Sep-2006 : Fixed bug 1562759, constructor ignoring arguments (DG);
- * 01-Jun-2007 : Return early from drawItem() method if item is not 
+ * 01-Jun-2007 : Return early from drawItem() method if item is not
  *               visible (DG);
  * 14-Jun-2007 : If the dataset is not a StatisticalCategoryDataset, revert
  *               to the drawing behaviour of LineAndShapeRenderer (DG);
  * 20-Jun-2007 : Removed JCommon dependencies (DG);
  * 29-Jun-2007 : Simplified entity generation by calling addEntity() (DG);
- * 
+ * 27-Sep-2007 : Added offset option to match new option in 
+ *               LineAndShapeRenderer (DG);
+ *
  */
 
 package org.jfree.chart.renderer.category;
@@ -79,16 +81,16 @@ import org.jfree.data.category.CategoryDataset;
 import org.jfree.data.statistics.StatisticalCategoryDataset;
 
 /**
- * A renderer that draws shapes for each data item, and lines between data 
- * items.  Each point has a mean value and a standard deviation line. For use 
+ * A renderer that draws shapes for each data item, and lines between data
+ * items.  Each point has a mean value and a standard deviation line. For use
  * with the {@link CategoryPlot} class.
  */
-public class StatisticalLineAndShapeRenderer extends LineAndShapeRenderer 
+public class StatisticalLineAndShapeRenderer extends LineAndShapeRenderer
         implements Cloneable, PublicCloneable, Serializable {
 
     /** For serialization. */
     private static final long serialVersionUID = -3557517173697777579L;
-    
+
     /** The paint used to show the error indicator. */
     private transient Paint errorIndicatorPaint;
 
@@ -101,11 +103,11 @@ public class StatisticalLineAndShapeRenderer extends LineAndShapeRenderer
 
     /**
      * Constructs a new renderer.
-     * 
+     *
      * @param linesVisible  draw lines?
      * @param shapesVisible  draw shapes?
      */
-    public StatisticalLineAndShapeRenderer(boolean linesVisible, 
+    public StatisticalLineAndShapeRenderer(boolean linesVisible,
                                            boolean shapesVisible) {
         super(linesVisible, shapesVisible);
         this.errorIndicatorPaint = null;
@@ -113,25 +115,30 @@ public class StatisticalLineAndShapeRenderer extends LineAndShapeRenderer
 
     /**
      * Returns the paint used for the error indicators.
-     * 
-     * @return The paint used for the error indicators (possibly 
+     *
+     * @return The paint used for the error indicators (possibly
      *         <code>null</code>).
+     *         
+     * @see #setErrorIndicatorPaint(Paint)
      */
     public Paint getErrorIndicatorPaint() {
-        return this.errorIndicatorPaint;   
+        return this.errorIndicatorPaint;
     }
 
     /**
-     * Sets the paint used for the error indicators (if <code>null</code>, 
-     * the item outline paint is used instead)
-     * 
+     * Sets the paint used for the error indicators (if <code>null</code>,
+     * the item outline paint is used instead) and sends a 
+     * {@link RendererChangeEvent} to all registered listeners.
+     *
      * @param paint  the paint (<code>null</code> permitted).
+     * 
+     * @see #getErrorIndicatorPaint()
      */
     public void setErrorIndicatorPaint(Paint paint) {
         this.errorIndicatorPaint = paint;
         notifyListeners(new RendererChangeEvent(this));
     }
-    
+
     /**
      * Draw a single data item.
      *
@@ -141,8 +148,8 @@ public class StatisticalLineAndShapeRenderer extends LineAndShapeRenderer
      * @param plot  the plot.
      * @param domainAxis  the domain axis.
      * @param rangeAxis  the range axis.
-     * @param dataset  the dataset (a {@link StatisticalCategoryDataset} is 
-     *   required).
+     * @param dataset  the dataset (a {@link StatisticalCategoryDataset} is
+     *                 required).
      * @param row  the row index (zero-based).
      * @param column  the column index (zero-based).
      * @param pass  the pass.
@@ -160,24 +167,24 @@ public class StatisticalLineAndShapeRenderer extends LineAndShapeRenderer
 
         // do nothing if item is not visible
         if (!getItemVisible(row, column)) {
-            return;   
+            return;
         }
 
         // nothing is drawn for null...
         Number v = dataset.getValue(row, column);
         if (v == null) {
-          return;
+            return;
         }
 
         // if the dataset is not a StatisticalCategoryDataset then just revert
         // to the superclass (LineAndShapeRenderer) behaviour...
         if (!(dataset instanceof StatisticalCategoryDataset)) {
-            super.drawItem(g2, state, dataArea, plot, domainAxis, rangeAxis, 
+            super.drawItem(g2, state, dataArea, plot, domainAxis, rangeAxis,
                     dataset, row, column, pass);
             return;
         }
-        
-        StatisticalCategoryDataset statData 
+
+        StatisticalCategoryDataset statData
                 = (StatisticalCategoryDataset) dataset;
 
         Number meanValue = statData.getMeanValue(row, column);
@@ -185,10 +192,18 @@ public class StatisticalLineAndShapeRenderer extends LineAndShapeRenderer
         PlotOrientation orientation = plot.getOrientation();
 
         // current data point...
-        double x1 = domainAxis.getCategoryMiddle(column, getColumnCount(), 
-                dataArea, plot.getDomainAxisEdge());
+        double x1;
+        if (getUseSeriesOffset()) {
+            x1 = domainAxis.getCategorySeriesMiddle(dataset.getColumnKey(
+                    column), dataset.getRowKey(row), dataset, getItemMargin(), 
+                    dataArea, plot.getDomainAxisEdge());            
+        }
+        else {
+            x1 = domainAxis.getCategoryMiddle(column, getColumnCount(), 
+                    dataArea, plot.getDomainAxisEdge());
+        }
 
-        double y1 = rangeAxis.valueToJava2D(meanValue.doubleValue(), dataArea, 
+        double y1 = rangeAxis.valueToJava2D(meanValue.doubleValue(), dataArea,
                 plot.getRangeAxisEdge());
 
         Shape shape = getItemShape(row, column);
@@ -199,14 +214,14 @@ public class StatisticalLineAndShapeRenderer extends LineAndShapeRenderer
             shape = ShapeUtilities.createTranslatedShape(shape, x1, y1);
         }
         if (getItemShapeVisible(row, column)) {
-            
+
             if (getItemShapeFilled(row, column)) {
                 g2.setPaint(getItemPaint(row, column));
                 g2.fill(shape);
             }
             else {
                 if (getUseOutlinePaint()) {
-                    g2.setPaint(getItemOutlinePaint(row, column));   
+                    g2.setPaint(getItemOutlinePaint(row, column));
                 }
                 else {
                     g2.setPaint(getItemPaint(row, column));
@@ -224,10 +239,20 @@ public class StatisticalLineAndShapeRenderer extends LineAndShapeRenderer
 
                     // previous data point...
                     double previous = previousValue.doubleValue();
-                    double x0 = domainAxis.getCategoryMiddle(column - 1, 
-                            getColumnCount(), dataArea, 
-                            plot.getDomainAxisEdge());
-                    double y0 = rangeAxis.valueToJava2D(previous, dataArea, 
+                    double x0;
+                    if (getUseSeriesOffset()) {
+                        x0 = domainAxis.getCategorySeriesMiddle(
+                                dataset.getColumnKey(column - 1), 
+                                dataset.getRowKey(row), dataset, 
+                                getItemMargin(), dataArea, 
+                                plot.getDomainAxisEdge());
+                    }
+                    else {
+                        x0 = domainAxis.getCategoryMiddle(column - 1, 
+                                getColumnCount(), dataArea, 
+                                plot.getDomainAxisEdge());
+                    }
+                    double y0 = rangeAxis.valueToJava2D(previous, dataArea,
                             plot.getRangeAxisEdge());
 
                     Line2D line = null;
@@ -245,45 +270,39 @@ public class StatisticalLineAndShapeRenderer extends LineAndShapeRenderer
         }
 
         RectangleEdge yAxisLocation = plot.getRangeAxisEdge();
-        RectangleEdge xAxisLocation = plot.getDomainAxisEdge();
-        double rectX = domainAxis.getCategoryStart(column, getColumnCount(), 
-                dataArea, xAxisLocation);
-        
-        rectX = rectX + row * state.getBarWidth();
-        
         g2.setPaint(getItemPaint(row, column));
 
         //standard deviation lines
-        double valueDelta = statData.getStdDevValue(row, column).doubleValue(); 
+        double valueDelta = statData.getStdDevValue(row, column).doubleValue();
 
         double highVal, lowVal;
-        if ((meanValue.doubleValue() + valueDelta) 
+        if ((meanValue.doubleValue() + valueDelta)
                 > rangeAxis.getRange().getUpperBound()) {
             highVal = rangeAxis.valueToJava2D(
-                    rangeAxis.getRange().getUpperBound(), dataArea, 
+                    rangeAxis.getRange().getUpperBound(), dataArea,
                     yAxisLocation);
         }
         else {
-            highVal = rangeAxis.valueToJava2D(meanValue.doubleValue() 
+            highVal = rangeAxis.valueToJava2D(meanValue.doubleValue()
                     + valueDelta, dataArea, yAxisLocation);
         }
-        
-        if ((meanValue.doubleValue() + valueDelta) 
+
+        if ((meanValue.doubleValue() + valueDelta)
                 < rangeAxis.getRange().getLowerBound()) {
             lowVal = rangeAxis.valueToJava2D(
-                    rangeAxis.getRange().getLowerBound(), dataArea, 
+                    rangeAxis.getRange().getLowerBound(), dataArea,
                     yAxisLocation);
         }
         else {
-            lowVal = rangeAxis.valueToJava2D(meanValue.doubleValue() 
+            lowVal = rangeAxis.valueToJava2D(meanValue.doubleValue()
                     - valueDelta, dataArea, yAxisLocation);
         }
-        
+
         if (this.errorIndicatorPaint != null) {
-            g2.setPaint(this.errorIndicatorPaint);  
+            g2.setPaint(this.errorIndicatorPaint);
         }
         else {
-            g2.setPaint(getItemPaint(row, column));   
+            g2.setPaint(getItemPaint(row, column));
         }
         Line2D line = new Line2D.Double();
         if (orientation == PlotOrientation.HORIZONTAL) {
@@ -302,16 +321,16 @@ public class StatisticalLineAndShapeRenderer extends LineAndShapeRenderer
             line.setLine(x1 - 5.0d, lowVal, x1 + 5.0d, lowVal);
             g2.draw(line);
         }
-        
+
         // draw the item label if there is one...
         if (isItemLabelVisible(row, column)) {
             if (orientation == PlotOrientation.HORIZONTAL) {
-              drawItemLabel(g2, orientation, dataset, row, column, 
-                  y1, x1, (meanValue.doubleValue() < 0.0));
+                drawItemLabel(g2, orientation, dataset, row, column,
+                        y1, x1, (meanValue.doubleValue() < 0.0));
             }
             else if (orientation == PlotOrientation.VERTICAL) {
-              drawItemLabel(g2, orientation, dataset, row, column, 
-                  x1, y1, (meanValue.doubleValue() < 0.0));                
+                drawItemLabel(g2, orientation, dataset, row, column,
+                        x1, y1, (meanValue.doubleValue() < 0.0));
             }
         }
 
@@ -321,32 +340,31 @@ public class StatisticalLineAndShapeRenderer extends LineAndShapeRenderer
             addItemEntity(entities, dataset, row, column, shape);
         }
 
-
     }
 
     /**
      * Tests this renderer for equality with an arbitrary object.
-     * 
+     *
      * @param obj  the object (<code>null</code> permitted).
-     * 
+     *
      * @return A boolean.
      */
     public boolean equals(Object obj) {
         if (obj == this) {
-            return true;   
+            return true;
         }
         if (!(obj instanceof StatisticalLineAndShapeRenderer)) {
-            return false;   
+            return false;
         }
-        StatisticalLineAndShapeRenderer that 
+        StatisticalLineAndShapeRenderer that
                 = (StatisticalLineAndShapeRenderer) obj;
-        if (!PaintUtilities.equal(this.errorIndicatorPaint, 
+        if (!PaintUtilities.equal(this.errorIndicatorPaint,
                 that.errorIndicatorPaint)) {
             return false;
         }
         return super.equals(obj);
     }
-    
+
     /**
      * Provides serialization support.
      *
@@ -367,8 +385,8 @@ public class StatisticalLineAndShapeRenderer extends LineAndShapeRenderer
      * @throws IOException  if there is an I/O error.
      * @throws ClassNotFoundException  if there is a classpath problem.
      */
-    private void readObject(ObjectInputStream stream) 
-        throws IOException, ClassNotFoundException {
+    private void readObject(ObjectInputStream stream)
+            throws IOException, ClassNotFoundException {
         stream.defaultReadObject();
         this.errorIndicatorPaint = SerialUtilities.readPaint(stream);
     }
